解决当关闭顶部公告后，导航栏没有随之固定到页面顶部的bug

--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -25,7 +25,7 @@
 {include file="desktop/common/nav" /}
 {/block}
 
-<section>
+<section class="g-section">
     {block name="body"}
     <!-- 主体内容 -->
 
