--- a/app/frontend/view/mobile/common/base.html
+++ b/app/frontend/view/mobile/common/base.html
@@ -27,7 +27,7 @@
 {include file="mobile/common/nav" /}
 {/block}
 
-<section>
+<section class="g-section">
     {block name="body"}
     <!-- 主体内容 -->
 
