--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -226,6 +226,11 @@ body {
 }
 .g-hd {
   width: 100%;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transform: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 .g-hd .hd {
   height: 30px;
