pc端导航改造准备

--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -14,7 +14,7 @@
         <div class="common-width">
             <h3>{$data.title}</h3>
             <div class="sub_nav">
-                <span class="active">Overview</span>
+<!--                <span class="active">Overview</span>-->
 <!--                <span>Specs</span>-->
 <!--                <span><a href="#">Shop at Amazon</a></span>-->
 <!--                <span><a href="#">Shop at Newegg</a></span>-->
