--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -217,12 +217,21 @@ body {
     font-size: 12px;
   }
 }
-.g-hd-fixed {
+.cloneNav {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 9999;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transform: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.cloneNav .nav .item-children {
+  position: fixed!important;
+  top: 130px!important;
 }
 .g-hd {
   width: 100%;
