--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -222,12 +222,13 @@ body {
   top: 0;
   left: 0;
   z-index: 9999;
+  overflow: hidden;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -ms-transform: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
+  -webkit-transition: all 0.2s linear !important;
+  -moz-transition: all 0.2s linear !important;
+  -ms-transform: all 0.2s linear !important;
+  -o-transition: all 0.2s linear !important;
+  transition: all 0.2s linear !important;
 }
 .cloneNav .nav .item-children {
   position: fixed!important;
