--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -170,10 +170,9 @@ body {
   top: 0;
   left: 0;
   z-index: 9999;
-  //height: 0;
-  //overflow: hidden;
+  overflow: hidden;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-  #transition(all .2s linear);
+  #transition(all .2s linear)!important;
   .nav .item-children {
     position: fixed!important;
     top: 130px!important;
