--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -136,13 +136,13 @@ body {
 
 //重大通知
 .g-notice {
-  padding: 10px 0;
   text-align: center;
   color: @whiteSmoke;
   font-size: 14px;
 
   .des {
-    display: inline;
+    padding: 10px 0;
+    display: inline-block;
     color: @whiteSmoke;
     #transition(all .2s linear);
 
@@ -165,7 +165,7 @@ body {
 //重大通知
 
 //g-hd
-.cloneNav {
+.navFixed {
   position: fixed;
   top: 0;
   left: 0;
@@ -378,11 +378,6 @@ body {
   }
 
   @media screen and (min-width: 768px) and (max-width: 991px) {
-    .nav {
-      position: static;
-      background: @whiteColor;
-    }
-
     .nav .logo a {
       .clearFix();
       padding: 5px;
@@ -394,7 +389,7 @@ body {
 
     .nav .item-children {
       padding: 0 10px;
-      top: 120px;
+      top: 90px;
     }
 
     .nav .item-children .children-list {
@@ -408,6 +403,10 @@ body {
 
     .nav .item-children .children-list a {
       font-size: 12px;
+    }
+
+    .nav .item-children .children-list a img {
+      width: 100px;
     }
   }
   @media screen and (min-width: 992px) and (max-width: 1199px) {
