--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -119,7 +119,7 @@ input[type="reset"] {
 
 @font-face {
   font-family: Neo_Sans;
-  src: url("../../../lib/font/maax/Maax Rounded.otf");
+  src: url("../../../lib/font/Maax/Maax_Rounded.otf");
 }
 
 body {
