--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -109,7 +109,7 @@ a {
 
 @font-face {
   font-family: Neo_Sans;
-  src: url("../../../lib/font/maax/Maax Rounded.otf");
+  src: url("../../../lib/font/Maax/Maax_Rounded.otf");
 }
 
 body {
@@ -286,6 +286,7 @@ body {
       display: block;
       position: relative;
       color: @baseColor;
+      font-size: 16px;
       line-height: 60px;
       font-weight: 700;
       #transition(all .2s);
@@ -387,6 +388,10 @@ body {
       padding: 15px 5px;
     }
 
+    .nav .menu-box .menu-list .menu-item .item-link {
+      font-size: 14px;
+    }
+
     .nav .item-children {
       padding: 0 10px;
       top: 90px;
@@ -414,6 +419,9 @@ body {
       padding: 20px 10px;
     }
 
+    .nav .menu-box .menu-list .menu-item .item-link {
+      font-size: 14px;
+    }
     .nav .item-children {
       padding: 0 15px;
     }
