手机端导航交互优化以及产品列表页面间距调整

--- a/app/frontend/view/mobile/common/nav.html
+++ b/app/frontend/view/mobile/common/nav.html
@@ -25,7 +25,7 @@
             </li>
             {/volist}
             <li class="menu-item">
-                <a class="item-link" href="#">Store <span class="iconfont iconarrow-down"></span></a>
+                <a class="item-link" href="javascript:void(0)">Store <span class="iconfont iconadd-select"></span></a>
                 <ul class="child-menu">
                     <li class="menu-item"><a class="item-link" href="#">Amazon</a></li>
                     <li class="menu-item"><a class="item-link" href="#">Newegg</a></li>
