--- a/public/static/frontend/mobile/css/public/components.css
+++ b/public/static/frontend/mobile/css/public/components.css
@@ -273,7 +273,7 @@ body {
   font-size: 24px;
 }
 .g-hd .menu-box .child-menu .item-link {
-  padding: 0 20px;
+  padding: 0 10px 0 30px;
 }
 .g-hd .menu-box .child-menu {
   display: none;
