--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -109,7 +109,7 @@ a {
 
 @font-face {
   font-family: Neo_Sans;
-  src: url("../../../lib/font/Maax/Maax_Rounded.otf");
+  src: url("../../../lib/font/Maax/Maax_Rounded.otf")
 }
 
 body {
