--- a/app/admin/view/media/image/upload.html
+++ b/app/admin/view/media/image/upload.html
@@ -7,10 +7,7 @@
           <button type="button" class="layui-btn" id="upload">
             多图片上传
           </button>
-          <blockquote
-            class="layui-elem-quote layui-quote-nm"
-            style="margin-top: 10px; min-height: 100px;"
-          >
+          <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px; min-height: 100px;">
             <div class="layui-upload-list" id="list"></div>
           </blockquote>
           <input type="hidden" name="album" id="album" />
@@ -20,11 +17,7 @@
           <label class="layui-form-label">
             上传进度
           </label>
-          <div
-            class="layui-progress"
-            lay-showPercent="true"
-            lay-filter="progress"
-          >
+          <div class="layui-progress" lay-showPercent="true" lay-filter="progress">
             <div class="layui-progress-bar layui-bg-green" lay-percent=""></div>
           </div>
         </div>
@@ -32,7 +25,8 @@
     </form>
   </div>
 </div>
-{/block} {block name="copyright"} {/block} {block name="javascript"}
+{/block} {block name="copyright"} {/block}
+{block name="javascript"}
 <script>
   layui.use(["form", "layer", "upload", "jquery", "element"], function () {
     let $ = layui.jquery;
@@ -43,15 +37,16 @@
       elem: "#upload",
       url: "{:url('media/image/upload')}", //改成您自己的上传接口
       multiple: true,
+      accept: 'file',
       before: function (obj) {
         //预读本地文件示例，不支持ie8
         obj.preview(function (index, file, result) {
           $("#list").append(
             '<img src="' +
-              result +
-              '" alt="' +
-              file.name +
-              '" class="layui-upload-img" style="margin-right: 10px;width: 100px">'
+            result +
+            '" alt="' +
+            file.name +
+            '" class="layui-upload-img" style="margin-right: 10px;width: 100px">'
           );
         });
       },
