--- a/app/admin/view/system/setting/setting.html
+++ b/app/admin/view/system/setting/setting.html
@@ -8,9 +8,13 @@
                     <span class="x-red">*</span>LOGO
                 </label>
                 <div class="layui-input-inline">
-                    <button class="layui-btn" type="button" onclick="xadmin.open('选择图片','{:url(\'media/image_list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i class="layui-icon"></i>选择</button>
+                    <button class="layui-btn" type="button"
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'image\'])}')"><i
+                            class="layui-icon"></i>选择</button>
                     <div class="image" style="height: 150px;padding-top: 5px">
-                        <div style="height: 120px;background: #454545;margin: 10px;padding: 10px;text-align: center"><img src="{$data.logo}" alt="" style="height: 80%;" ></div>
+                        <div style="height: 120px;background: #454545;margin: 10px;padding: 10px;text-align: center">
+                            <img src="{$data.logo}" alt="" style="height: 80%;">
+                        </div>
                         <input type="hidden" name="logo" value="{$data.logo}" id="logo">
                     </div>
                 </div>
@@ -20,8 +24,8 @@
                     <span class="x-red">*</span>网站标题
                 </label>
                 <div class="layui-input-block" style="width: 50%">
-                    <input type="text" id="title" name="title" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input" value="{$data.title}">
+                    <input type="text" id="title" name="title" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input" value="{$data.title}">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -30,7 +34,7 @@
                 </label>
                 <div class="layui-input-block" style="width: 50%">
                     <input type="text" id="keywords" name="keywords" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input" value="{$data.keywords}">
+                        autocomplete="off" class="layui-input" value="{$data.keywords}">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
                 </div>
@@ -40,7 +44,8 @@
                     <span class="x-red">*</span>描述
                 </label>
                 <div class="layui-input-block">
-                    <textarea name="description" id="description" placeholder="请输入内容" class="layui-textarea">{$data.description}</textarea>
+                    <textarea name="description" id="description" placeholder="请输入内容"
+                        class="layui-textarea">{$data.description}</textarea>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -48,17 +53,19 @@
                     <span class="x-red">*</span>版权信息
                 </label>
                 <div class="layui-input-block">
-                    <textarea name="information" id="information" placeholder="请输入内容" class="layui-textarea">{$data.information|raw}</textarea>
+                    <textarea name="information" id="information" placeholder="请输入内容"
+                        class="layui-textarea">{$data.information|raw}</textarea>
                 </div>
             </div>
             <input type="hidden" name="id" value="{$data.id}">
-<!--            <input type="hidden" name="language_id" value="{$data.language_id}">-->
+            <!--            <input type="hidden" name="language_id" value="{$data.language_id}">-->
             <div class="layui-form-item">
                 <label for="analysis_code" class="layui-form-label">
                     <span class="x-red">*</span>统计代码
                 </label>
                 <div class="layui-input-block">
-                    <textarea rows="30" style="height: 485px" name="analysis_code" id="analysis_code" placeholder="请输入内容" class="layui-textarea">{$data.analysis_code|raw}</textarea>
+                    <textarea rows="30" style="height: 485px" name="analysis_code" id="analysis_code"
+                        placeholder="请输入内容" class="layui-textarea">{$data.analysis_code|raw}</textarea>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -91,12 +98,12 @@
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 500}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 500 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
-                            }else{
-                                layer.msg(result.message,{'icon':5,'time':1000});
+                            } else {
+                                layer.msg(result.message, { 'icon': 5, 'time': 1000 });
                             }
                         }
                     }, 'JSON');
