字体+导航logo修改

--- a/app/frontend/view/mobile/common/footer.html
+++ b/app/frontend/view/mobile/common/footer.html
@@ -25,6 +25,7 @@
         <div class="foot-contact">
             <h3>Contact Us</h3>
             <p><span>Before Sales: </span> <a href="mailto:postsales@minthouz.com">postsales@minthouz.com</a></p>
+            <p><span>Technical Support: </span> <a href="mailto:support@minthouz.com">support@minthouz.com</a></p>
             <p><span>Contact Us: </span> <a href="mailto:contact@minthouz.com">contact@minthouz.com</a></p>
             <p><span>Marketing: </span> <a href="mailto:marketing@minthouz.com">marketing@minthouz.com</a></p>
         </div>
