--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -108,12 +108,12 @@ a {
 }
 
 @font-face {
-  font-family: Neo_Sans;
-  src: url("../../../lib/font/Neo_Sans.ttf");
+  font-family: Inter;
+  src: url("../../../lib/font/Inter/Inter-VariableFont_slnt,wght.ttf");
 }
 
 body {
-  font-family: Neo_Sans, "Microsoft YaHei", Helvetica, "Meiryo UI", "Malgun Gothic", "Segoe UI", "Trebuchet MS", "Monaco", monospace, Tahoma, STXihei, "华文细黑", STHeiti, "Helvetica Neue", "Droid Sans", "wenquanyi micro hei", FreeSans, Arimo, Arial, SimSun, "宋体", Heiti, "黑体", sans-serif;
+  font-family: Inter, "Microsoft YaHei", Helvetica, "Meiryo UI", "Malgun Gothic", "Segoe UI", "Trebuchet MS", "Monaco", monospace, Tahoma, STXihei, "华文细黑", STHeiti, "Helvetica Neue", "Droid Sans", "wenquanyi micro hei", FreeSans, Arimo, Arial, SimSun, "宋体", Heiti, "黑体", sans-serif;
   background: @bodyBgColor;
   transition: all .3S;
   font-size: 14px;
@@ -248,13 +248,12 @@ body {
     .logo a {
       .clearFix();
       display: block;
-      padding: 10px;
     }
 
     .logo a img {
       .img-responsive();
       .center-block();
-      height: 60px;
+      height: 80px;
     }
 
     .menu-box {
