#升级框架 修改路由

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -59,7 +59,7 @@
                 </a>
               </li>
               <li>
-                <a onclick="xadmin.add_tab('关于我们','{:url(\'system/about/index\')}')">
+                <a onclick="xadmin.add_tab('关于我们','{:url(\'system_about\')}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>关于我们</cite>
                 </a>
@@ -90,7 +90,7 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a onclick="xadmin.add_tab('图片资源','{:url(\'media/image/list\',[\'path\'=>\'images\/\'])}')">
+            <a onclick="xadmin.add_tab('图片资源','{:url(\'media_index\',[\'path\'=>\'images\/\'])}')">
               <i class="iconfont">&#xe6a7;</i><cite>图片管理</cite>
             </a>
           </li>
