#路由修复 资源管理 类目管理 系统管理

--- a/app/admin/view/category/product_category/edit.html
+++ b/app/admin/view/category/product_category/edit.html
@@ -90,7 +90,7 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('category/product/edit')}",
+                        url: "{:url('category_edit_product')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
