--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -15,7 +15,7 @@
               <i class="iconfont nav_right">&#xe697;</i></a>
             <ul class="sub-menu">
               <li>
-                <a onclick="xadmin.add_tab('语言列表','{:url(\'system/language/index\')}')">
+                <a onclick="xadmin.add_tab('语言列表','{:url(\'system_language_index\')}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>语言列表</cite></a>
               </li>
@@ -53,7 +53,7 @@
             </a>
             <ul class="sub-menu">
               <li>
-                <a onclick="xadmin.add_tab('基本设置','{:url(\'system/setting\')}')">
+                <a onclick="xadmin.add_tab('基本设置','{:url(\'system_setting\')}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>基本设置</cite>
                 </a>
@@ -76,7 +76,7 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a onclick="xadmin.add_tab('产品分类','{:url(\'category/product/index\')}')">
+            <a onclick="xadmin.add_tab('产品分类','{:url(\'category_product\')}')">
               <i class="iconfont">&#xe6a7;</i>
               <cite>产品分类</cite></a>
           </li>
@@ -90,7 +90,7 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a onclick="xadmin.add_tab('图片资源','{:url(\'media_index\',[\'path\'=>\'images\/\'])}')">
+            <a onclick="xadmin.add_tab('图片资源','{:url(\'media_image_index\',[\'path\'=>\'images\/\'])}')">
               <i class="iconfont">&#xe6a7;</i><cite>图片管理</cite>
             </a>
           </li>
