--- a/app/admin/view/media/image/upload.html
+++ b/app/admin/view/media/image/upload.html
@@ -35,7 +35,7 @@
       layer = layui.layer;
     upload.render({
       elem: "#upload",
-      url: "{:url('media/image/upload')}", //改成您自己的上传接口
+      url: "{:url('media_upload_image')}", //改成您自己的上传接口
       multiple: true,
       accept: 'file',
       before: function (obj) {
