--- a/app/admin/view/system/language/edit_language.html
+++ b/app/admin/view/system/language/edit_language.html
@@ -63,7 +63,7 @@
             form.on('submit(edit)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('system/language/edit')}",
+                        url: "{:url('edit_language')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
