--- a/app/admin/view/category/product_category/add.html
+++ b/app/admin/view/category/product_category/add.html
@@ -12,7 +12,8 @@
                         <option value="0">顶级</option>
                         {notempty name='category'}
                         {volist name="category" id="vo"}
-                        <option value="{$vo.id}" {if($parent_id== $vo.id)}selected{/if}>{$vo.delimiter|raw}{$vo.name}</option>
+                        <option value="{$vo.id}" {if($parent_id==$vo.id)}selected{/if}>{$vo.delimiter|raw}{$vo.name}
+                        </option>
                         {/volist}
                         {/notempty}
                     </select>
@@ -23,8 +24,8 @@
                     <span class="x-red">*</span>分类名
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="name" name="name" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
+                    <input type="text" id="name" name="name" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -41,8 +42,8 @@
                     <span class="x-red">*</span>分类标题
                 </label>
                 <div class="layui-input-block" style="width: 50%">
-                    <input type="text" id="title" name="title" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
+                    <input type="text" id="title" name="title" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -51,7 +52,7 @@
                 </label>
                 <div class="layui-input-block" style="width: 50%">
                     <input type="text" id="keywords" name="keywords" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
+                        autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -88,17 +89,17 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('category/product/add')}",
+                        url: "{:url('category_add_product')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 1000}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
                             } else {
-                                layer.msg(result.message, {'icon': 5, 'time': 8000});
+                                layer.msg(result.message, { 'icon': 5, 'time': 8000 });
                             }
                         }
                     }, 'JSON');
