--- a/app/admin/view/category/product_category/index.html
+++ b/app/admin/view/category/product_category/index.html
@@ -18,7 +18,7 @@
                 <div class="layui-card-body ">
                     <div class="layui-input-inline layui-show-xs-block">
                         <button class="layui-btn"
-                            onclick="xadmin.open('添加','{:url(\'category/product/add\')}',800,600)"><i
+                            onclick="xadmin.open('添加','{:url(\'category_add_product\')}',800,600)"><i
                                 class="layui-icon"></i>添加
                         </button>
                     </div>
@@ -67,21 +67,21 @@
                                 </td>
                                 <td class="td-manage">
                                     <button class="layui-btn layui-btn layui-btn-xs"
-                                        onclick="xadmin.open('编辑','{:url(\'category/product/edit\',[\'id\'=>$vo.id])}',800,600)">
+                                        onclick="xadmin.open('编辑','{:url(\'category_edit_product\',[\'id\'=>$vo.id])}',800,600)">
                                         <i class="layui-icon">&#xe642;</i>编辑
                                     </button>
                                     {if($vo.is_parent === 1)}
                                     <button class="layui-btn layui-btn-warm layui-btn-xs"
-                                        onclick="xadmin.open('添加子分类','{:url(\'category/product/add\',[\'id\'=>$vo.id])}')">
+                                        onclick="xadmin.open('添加子分类','{:url(\'category_add_product\',[\'id\'=>$vo.id])}')">
                                         <i class="layui-icon">&#xe624;</i>子栏目
                                     </button>
                                     {/if}
                                     {if($vo.status == 2)}
                                     <button class="layui-btn layui-btn-normal layui-btn-mini"
-                                        onclick="changeStatus('{:url(\'category/product/change_status\',[\'id\'=>$vo.id,\'status\'=>1])}')">启用</button>
+                                        onclick="changeStatus('{:url(\'category_change_product\',[\'id\'=>$vo.id,\'status\'=>1])}')">启用</button>
                                     {else /}
                                     <button class="layui-btn layui-btn-danger layui-btn-mini"
-                                        onclick="changeStatus('{:url(\'category/product/change_status\',[\'id\'=>$vo.id,\'status\'=>2])}')">禁用</button>
+                                        onclick="changeStatus('{:url(\'category_change_product\',[\'id\'=>$vo.id,\'status\'=>2])}')">禁用</button>
                                     {/if}
                                     <!--<button class="layui-btn-danger layui-btn layui-btn-xs"
                                         onclick="member_del(this,'要删除的id')" href="javascript:;"><i class="layui-icon">&#xe640;</i>删除
@@ -146,7 +146,7 @@
             'id': id,
             'listorder': listorder
         };
-        let url = '{:url(\'category/order\')}';
+        let url = '{:url(\'category_order_product\')}';
         $.post(url, postData, function (result) {
             if (result.status === 1) {
                 layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
