--- a/app/admin/view/media/image/index.html
+++ b/app/admin/view/media/image/index.html
@@ -48,10 +48,9 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <button class="layui-btn" onclick="xadmin.open('上传','{:url(\'media/image/upload\')}',600,600)"><i
+                    <button class="layui-btn" onclick="xadmin.open('上传','{:url(\'media_upload_image\')}',600,600)"><i
                             class="layui-icon"></i>上传图片</button>
-                    <button class="layui-btn"
-                        onclick="xadmin.open('创建目录','{:url(\'media/image/create_folder\')}',600,300)"><i
+                    <button class="layui-btn" onclick="xadmin.open('创建目录','{:url(\'media_create_folder\')}',600,300)"><i
                             class="iconfont">&#xe83c;</i> 创建目录</button>
                 </div>
                 <div class="layui-card-body layui-clear">
@@ -61,11 +60,11 @@
                     <div class="item-list"
                         style="position: relative;display: inline-block;padding: 10px;text-align: center;float: left">
                         <div style="height: 126px;display: inline-block;padding: 10px;text-align: center;float: left">
-                            <a href="{:url('media/image/list',['path'=>$item.key])}" style="display: inline-block">
+                            <a href="{:url('media_image_index',['path'=>$item.key])}" style="display: inline-block">
                                 <i class="iconfont"
                                     style="font-size: 100px;color: #ffdc69;line-height: 100px">&#xe83c;</i>
                             </a>
-                            <p><a href="{:url('media/image/list',['path'=>$item.key])}">{$item['name']}</a></p>
+                            <p><a href="{:url('media_image_index',['path'=>$item.key])}">{$item['name']}</a></p>
                         </div>
                     </div>
                     {else /}
@@ -88,7 +87,7 @@
                                     <li class="btnCopy"><a href="#" title="复制url链接"><span class="iconfont"
                                                 style="font-size: 16px">&#xe744;</span>复制</a></li>
                                     <li><a href="javascript:;"
-                                            onclick="del('{:url(\'media/image/del\',[\'key\'=>$item.key])}')" title="删除"
+                                            onclick="del('{:url(\'media_del_image\',[\'key\'=>$item.key])}')" title="删除"
                                             style="font-size: 16px"><span class="iconfont">&#xe69d;</span><span
                                                 style="font-size: 12px"> 删除</span></a></li>
                                 </ul>
