#路由修复 内容管理

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -104,7 +104,7 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a onclick="xadmin.add_tab('通知管理','{:url(\'content/notice\')}')">
+            <a onclick="xadmin.add_tab('通知管理','{:url(\'content_notice\')}')">
               <i class="iconfont">&#xe6a7;</i>
               <cite>通知管理</cite></a>
           </li>
@@ -115,29 +115,29 @@
               <i class="iconfont nav_right">&#xe697;</i></a>
             <ul class="sub-menu">
               <li>
-                <a onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content/prettiest/index\',[\'type\'=>1])}')">
+                <a onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content_pretties_index\',[\'type\'=>1])}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>幻灯片(活动/新品)</cite></a>
               </li>
               <li>
-                <a onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content/prettiest/index\',[\'type\'=>2])}')">
+                <a onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content_pretties_index\',[\'type\'=>2])}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>热门(实力担当)</cite></a>
               </li>
               <li>
-                <a onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content/prettiest/index\',[\'type\'=>3])}')">
+                <a onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content_pretties_index\',[\'type\'=>3])}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>重金(镇馆之宝)</cite></a>
               </li>
               <li>
-                <a onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content/prettiest/index\',[\'type\'=>4])}')">
+                <a onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content_pretties_index\',[\'type\'=>4])}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>霸屏横幅(实力推荐)</cite></a>
               </li>
             </ul>
           </li>
           <li>
-            <a onclick="xadmin.add_tab('产品管理','{:url(\'content/product/index\')}')">
+            <a onclick="xadmin.add_tab('产品管理','{:url(\'content_product_index\')}')">
               <i class="iconfont">&#xe6a7;</i>
               <cite>产品管理</cite></a>
           </li>
