--- a/app/admin/view/content/notice/notice.html
+++ b/app/admin/view/content/notice/notice.html
@@ -8,7 +8,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media_select_image\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
                         <i class="layui-icon"></i>选择
                     </button>
                     <div class="desktop" style="height: 92px;padding-top: 5px">
@@ -27,7 +27,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media_select_image\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
                         <i class="layui-icon"></i>选择</button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
                         {notempty name="data.mobile"}
@@ -89,7 +89,7 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('content/notice')}",
+                        url: "{:url('content_notice')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
