--- a/app/admin/view/content/prettiest/edit.html
+++ b/app/admin/view/content/prettiest/edit.html
@@ -29,7 +29,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media_select_image\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
                         <i class="layui-icon"></i>选择图片</button>
                     <div class="desktop" style="height: 92px;padding-top: 5px">
                         <img src="{$data.desktop}" alt="" style="height: 92px">
@@ -43,7 +43,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media_select_image\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
                         <i class="layui-icon"></i>选择
                     </button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
@@ -113,7 +113,7 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('content/prettiest/edit')}",
+                        url: "{:url('content_edit_pretties')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
