修复路径错误

--- a/app/admin/view/media/image/index.html
+++ b/app/admin/view/media/image/index.html
@@ -33,9 +33,9 @@
 <div class="x-nav">
     <span class="layui-breadcrumb">
         <a href="">首页</a>
-        <a href="{:url('media/image/list',['path'=>'images/'])}">图片管理</a>
+        <a href="{:url('media_image_index',['path'=>'images/'])}">图片管理</a>
         {volist name="nav" id="vo" offset="1"}
-        <a href="{:url('media/image/list',['path'=>$vo.path])}">{$vo.name}</a>
+        <a href="{:url('media_image_index',['path'=>$vo.path])}">{$vo.name}</a>
         {/volist}
         <!--            <a><cite>图片列表</cite></a>-->
     </span>
