--- a/app/admin/view/media/image/select.html
+++ b/app/admin/view/media/image/select.html
@@ -60,7 +60,7 @@
                     <div class="item-list"
                         style="position: relative;display: inline-block;padding: 10px;text-align: center;float: left">
                         <div style="height: 126px;display: inline-block;padding: 10px;text-align: center;float: left">
-                            <a href="{:url('media_image_index',['path'=>$item.key,'class'=>$class])}"
+                            <a href="{:url('media_select_image',['path'=>$item.key,'class'=>$class])}"
                                 style="display: inline-block">
                                 <i class="iconfont"
                                     style="font-size: 100px;color: #ffdc69;line-height: 100px">&#xe83c;</i>
