--- a/app/admin/view/system/setting/setting.html
+++ b/app/admin/view/system/setting/setting.html
@@ -9,7 +9,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media_index\',[\'path\'=>\'images\/\',\'class\'=>\'image\'])}')"><i
+                        onclick="xadmin.open('选择图片','{:url(\'media_select_image\',[\'path\'=>\'images\/\',\'class\'=>\'image\'])}')"><i
                             class="layui-icon"></i>选择</button>
                     <div class="image" style="height: 150px;padding-top: 5px">
                         <div style="height: 120px;background: #454545;margin: 10px;padding: 10px;text-align: center">
